--- a/index.html
+++ b/index.html
@@ -6,30 +6,23 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
    <link rel="stylesheet" href="Card.css" />
-   <link rel="stylesheet" href="apropos.css" />
-   <link rel="stylesheet" href="banner.css" />
-   <link rel="stylesheet" href="nav.css" />
-   <link rel="stylesheet" href="article.css" />
+   <!-- <link rel="stylesheet" href="banner.css" />
+   <link rel="stylesheet" href="nav.css" /> -->
    <title>Anime Jonetsu</title>
-   <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc...">
-   <meta name="author" content="Ericka, Aina, Guillaume et Nabil">
+   <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc..." />
+   <meta name="author" content="Ericka, Aina, Guillaume et Nabil" />
 </head>
 
 <body>
-
-         
    <header>
-         <!-- AINA -->
-      <nav>
-      </nav>
+      <!-- AINA -->
+      <nav></nav>
 
-         <!-- GUILLAUME -->
-      <section>
-
-      </section>
+      <!-- GUILLAUME -->
+      <section></section>
    </header>
 
-         <!-- NABIL -->
+   <!-- NABIL -->
    <h2>Fellows wanted dead or alive</h2>
    <main>
       <div class="container">
@@ -37,15 +30,16 @@
             <div class="face face1">
                <div class="content">
                   <img src="images/Top2.jpg" alt="image1" />
-                  <h3>Gandalf</h3>
+                  <h3>Le Titan Assaillant</h3>
                </div>
             </div>
             <div class="face face2">
                <div class="content">
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                     En l’an 845, les humains n’ont pas aperçu de Titans aux abords
+                     du district de Shiganshina...
                   </p>
-                  <a href="">Read More</a>
+                  <a href="article.html" target="_blank">Read More</a>
                </div>
             </div>
          </div>
@@ -53,17 +47,17 @@
          <div class="card card2">
             <div class="face face1">
                <div class="content">
-                  <img src="images/gif1.gif" alt="image1" />
-                  <h3>Legolas</h3>
+                  <img src="images/dbz.jpg" alt="image1" />
+                  <h3>Dragon Ball Z</h3>
                </div>
             </div>
             <div class="face face2">
                <div class="content">
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                     eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                     Dragon Ball Z se déroule cinq ans après le mariage de Son Goku
+                     et de Chichi, désormais parents de...
                   </p>
-                  <a href="">Read More</a>
+                  <a href="article.html" target="_blank">Read More</a>
                </div>
             </div>
          </div>
@@ -71,17 +65,17 @@
          <div class="card card3">
             <div class="face face1">
                <div class="content">
-                  <img src="images/Top2.jpg" alt="image1" />
-                  <h3>Gimli</h3>
+                  <img src="images/Top3.jpg " alt="image1" />
+                  <h3>Hunter x Hunter</h3>
                </div>
             </div>
             <div class="face face2">
                <div class="content">
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                     eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                     Gon Freecss a douze ans, et rêve de devenir hunter (chasseur en
+                     anglais). Les hunters sont des aventuriers...
                   </p>
-                  <a href="">Read More</a>
+                  <a href="article.html" target="_blank">Read More</a>
                </div>
             </div>
          </div>
@@ -89,17 +83,17 @@
          <div class="card card3">
             <div class="face face1">
                <div class="content">
-                  <img src="images/Top2.jpg" alt="image1" />
-                  <h3>Gimli</h3>
+                  <img src="images/onepiece.jpg " alt="image1" />
+                  <h3>One Piece</h3>
                </div>
             </div>
             <div class="face face2">
                <div class="content">
                   <p>
-                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                     eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                     La série suit les aventures de Monkey D. Luffy, un jeune garçon
+                     accompagné de son fidèle équipage...
                   </p>
-                  <a href="">Read More</a>
+                  <a href="article.html" target="_blank">Read More</a>
                </div>
             </div>
          </div>
@@ -107,16 +101,11 @@
    </main>
    <h2>Fellows wanted dead or alive</h2>
 
-         <!-- GUILLAUME CONTACT -->
-   <section>
+   <!-- GUILLAUME CONTACT -->
+   <section></section>
 
-   </section>
-
-         <!-- AINA -->
-   <footer>
-      
-   </footer>
-
+   <!-- AINA -->
+   <footer></footer>
 </body>
 
 </html>
