--- a/article.html
+++ b/article.html
@@ -5,8 +5,6 @@
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-   <link rel="stylesheet" href="Card.css" />
-   <link rel="stylesheet" href="apropos.css" />
    <link rel="stylesheet" href="banner.css" />
    <link rel="stylesheet" href="nav.css" />
    <link rel="stylesheet" href="article.css" />
@@ -23,17 +21,28 @@
       </nav>
 
          <!-- GUILLAUME BANNER -->
-      <section>
+      <section class="banniere">
 
       </section>
    </header>
-
+   <main>
          <!-- eRICKA ARTICLE-->
-      <section>
+      <section class=article1-DBZ>
+         <h1 class="typographie-titre">Dragon ball Z, plus qu'un mangas une legende !</h1>
+         <article class="typographie" >
+            <img class="gif-DBZ1" src="images/gif-article-DBZ.gif">
+            <p class="p-float" > Dragon Ball Z reprend l'histoire de Sangoku plusieurs années après son mariage avec Chichi. Le couple a un fils nommé Sangohan en hommage à son arrière grand-père du même nom.</p>
+            <p class="p-float" >Un jour, Raditz atterrit sur la Terre et déclare qu'il est le frère de Sangoku. Il appartient au peuple des Sayajins, des guerriers intersidéraux mettant l'univers à feu et à sang. Leur planète, la planète Vegeta, a été détruite et il ne reste plus que quatre Sayajins purs : Sangoku, Raditz et ses complices partis en mission, Vegeta et Nappa. Sangoku refuse de s'associer à Raditz qui décide alors d'enlever Sangohan. 
+                  C'est ici que commence cette grande aventure... </p>
+            <img class="gif-DBZ2" src="images/gif1.gif">
+            <p class="p-float">C’est un manga culte de quatre séries animées: Dragon Ball, Dragon Ball Z, Dragon Ball GT, et une suite directe au manga, intitulée Dragon Ball Super.  </p>
+            <p class="p-float">Dragon Ball Super est la suite de la saga Boo. Cela parle un peu de ce qui s’est passé après la bataille, puis l’histoire continue sur la saga Battle of Gods, qui introduit Beerus, le dieu de la destruction, puis enchaîne sur la saga Résurrection de F à l’occasion de laquelle Freezer revient à la vie.  Projetés en dehors de notre univers, face à eux, nos voisins de l'Univers 6 !</p>
 
+         </article>
+         
       </section>
-
-            <!-- AINA -->
+   </main>
+         <!-- AINA -->
    <footer>
       
    </footer>
