--- a/index.html
+++ b/index.html
@@ -16,7 +16,23 @@
 <body>
    <header>
       <!-- AINA -->
-      <nav></nav>
+      <nav>
+            <div class="navbar">
+                <div>
+                    <a class = Anime href="#Anime">Anime Jonetsu</a>
+                    <a class = Articles href="#Articles">Articles</a>
+                    <a class = Apropos href="#Apropos">A propos</a>
+                </div>
+                <div class = "search-box">
+                    <input class = "search-txt" type = "text" name = "" placeholder = "Type to search">
+                    <a class = "search-btn" href = "#"> 
+                        <i class="fas fa-search"></i>
+                    </a>
+                    
+                </div>
+            </div>
+            
+      </nav>
 
       <!-- GUILLAUME -->
       <section></section>
