banner index terminée, mobile et desktop

--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="banner.css"/>
-    <link rel="page02.html"/>
-    <link rel="page03.html"/>
-    <title>Document</title>
-</head>
-<body>
-    <h1>Anime jonetsu</h1>
-    <section>
-        <div class="banner1">
-        <p class="text_banner1">Bienvenue sur la référence Toulousaine<br/> number one du manga!</p>
-        </div>
-        
-    </section>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="banner.css"/>
+        <link rel="page02.html"/>
+        <link rel="page03.html"/>
+        <title>Document</title>
+    </head>
+    <body>
+        <section>
+            <h1>Anime Jonetsu</h1>
+            <div id="banner1">
+                <div class="banner1_text_bouton">
+                    <p class="text_banner1">Bienvenue sur la référence Toulousaine<br/> number one du manga!</p>
+                    <input type="button" class="bouton1" value="Bande d'annonce">
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
