modification apporté, sur l'article et le formulaire de contact il reste juste le a propos concernant notre passion communes

--- a/article.html
+++ b/article.html
@@ -8,6 +8,8 @@
    <link rel="stylesheet" href="banner.css" />
    <link rel="stylesheet" href="nav.css" />
    <link rel="stylesheet" href="article.css" />
+   <link rel="stylesheet" href="footer.css"/>
+   <link href="https://fonts.googleapis.com/css?family=Patua+One|Permanent+Marker&amp;display=swap" rel="stylesheet">
    <title>Anime Jonetsu</title>
    <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc...">
    <meta name="author" content="Ericka, Aina, Guillaume et Nabil">
@@ -28,10 +30,9 @@
    <main>
          <!-- eRICKA ARTICLE-->
       <section class=article1-DBZ>
-         <h1 class="typographie-titre">Dragon ball Z, plus qu'un mangas une legende !</h1>
+         <h1 class="typographie-titre">Dragon ball , plus qu'un mangas une legende !</h1>
          <article class="typographie" >
-            <img class="gif-DBZ1" src="images/gif-article-DBZ.gif">
-            <p class="p-float" > <span class="MAJ">D</span>ragon Ball Z reprend l'histoire de Sangoku plusieurs années après son mariage avec Chichi. Le couple a un fils nommé Sangohan en hommage à son arrière grand-père du même nom.</p>
+            <p class="p-float" > <span class="MAJ">D</span>ragon Ball  reprend l'histoire de Sangoku plusieurs années après son mariage avec Chichi. Le couple a un fils nommé Sangohan en hommage à son arrière grand-père du même nom.</p>
             <p class="p-float" >Un jour, Raditz atterrit sur la Terre et déclare qu'il est le frère de Sangoku. Il appartient au peuple des Sayajins, des guerriers intersidéraux mettant l'univers à feu et à sang. Leur planète, la planète Vegeta, a été détruite et il ne reste plus que quatre Sayajins purs : Sangoku, Raditz et ses complices partis en mission, Vegeta et Nappa. Sangoku refuse de s'associer à Raditz qui décide alors d'enlever Sangohan. 
                   C'est ici que commence cette grande aventure... </p>
             <p class="p-float"><span class="MAJ">C</span>’est un manga culte de quatre séries animées: Dragon Ball, Dragon Ball Z, Dragon Ball GT, et une suite directe au manga, intitulée Dragon Ball Super.  </p>
@@ -44,7 +45,60 @@
    </main>
          <!-- AINA -->
    <footer>
-      
+      <div class="footer">
+         <div class="inner-footer">
+   
+            <div class="footer-items">
+               <h1>Anime jonetsu</h1>
+               <div class="border"></div>
+               <p>Lorem ipsum Veniam aliquip ex non laboris consequat et labore enim eiusmod enim ad fugiat culpa aliqua.</p>
+            </div>
+   
+            <div class="footer-items">
+               <h2>Quick links</h2>
+               <div class="border"></div>
+               <ul>
+                  <a href="#"><li>Accueil</li></a>
+                  <a href="#"><li>A propos</li></a>
+                  <a href="#"><li>Evènement</li></a>
+                  <a href="#"><li>Massage</li></a>
+                  <a href="#"><li>Cocktails</li></a>
+               </ul>
+            </div>
+   
+            <div class="footer-items">
+               <h2>Quick links</h2>
+               <div class="border"></div>
+               <ul>
+                  <a href="#"><li>Accueil</li></a>
+                  <a href="#"><li>A propos</li></a>
+                  <a href="#"><li>Evènement</li></a>
+                  <a href="#"><li>Massage</li></a>
+                  <a href="#"><li>Cocktails</li></a>
+               </ul>
+            </div>
+   
+            <div class="footer-items">
+               <h2>Quick links</h2>
+               <div class="border"></div>
+               <ul class="map">
+                  <li><i class="icon fas fa-map-marker-alt"></i>adresse</li>
+                  <li><i class="icon fas fa-phone"></i>adresse</li>
+                  <li><i class="icon fas fa-envelope"></i>adresse</li>
+                  <li><i class="icon fas fa-map-marker-alt"></i>adresse</li>
+               </ul>
+               <div class="social-media">
+                  <a href="#"><i class="social fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="social fas fa-map-marker-alt"></i></a>
+                  <a href="#"><i class="social fas fa-map-marker-alt"></i></a>
+               </div>
+            </div>
+   
+         </div>
+         <div class="footer-bottom">
+            Copyright &copy; Anime Jonetsu 2019. All rights reserved.
+         </div>
+      </div>
    </footer>
 
 </body>
