--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
             <div class="face face1">
                <div class="content">
                   <img src="images/dbz.jpg" alt="image1" />
-                  <h3>Dragon Ball Z</h3>
+                  <h3>Dragon Ball </h3>
                </div>
             </div>
             <div class="face face2">
                <div class="content">
                   <p>
-                     Dragon Ball Z se déroule cinq ans après le mariage de Son Goku
+                     Dragon Ball  se déroule cinq ans après le mariage de Son Goku
                      et de Chichi, désormais parents de...
                   </p>
                   <a href="article.html" target="_blank">Read More</a>
