--- a/apropos.html
+++ b/apropos.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="apropos.css" />
    <link rel="stylesheet" href="banner.css" />
    <link rel="stylesheet" href="nav.css" />
+   <link rel="stylesheet" href="footer.css">
    <title>Anime Jonetsu</title>
    <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc...">
    <meta name="author" content="Ericka, Aina, Guillaume et Nabil">
@@ -31,10 +32,10 @@
 
     </section>
 
-   <section >
+   <section class="formulaire">
    <!-- ERICKA contact-->
    <div id="form-main" >
-      <div id="form-div" class="formulaire-contact">
+      <div id="form-div" >
         <form class="form" id="form1">
           
           <p class="name">
@@ -63,6 +64,60 @@
             
    <footer>
       <!-- AINA -->
+      <div class="footer">
+         <div class="inner-footer">
+   
+            <div class="footer-items">
+               <h1>Anime jonetsu</h1>
+               <div class="border"></div>
+               <p>Lorem ipsum Veniam aliquip ex non laboris consequat et labore enim eiusmod enim ad fugiat culpa aliqua.</p>
+            </div>
+   
+            <div class="footer-items">
+               <h2>Quick links</h2>
+               <div class="border"></div>
+               <ul>
+                  <a href="#"><li>Accueil</li></a>
+                  <a href="#"><li>A propos</li></a>
+                  <a href="#"><li>Evènement</li></a>
+                  <a href="#"><li>Massage</li></a>
+                  <a href="#"><li>Cocktails</li></a>
+               </ul>
+            </div>
+   
+            <div class="footer-items">
+               <h2>Quick links</h2>
+               <div class="border"></div>
+               <ul>
+                  <a href="#"><li>Accueil</li></a>
+                  <a href="#"><li>A propos</li></a>
+                  <a href="#"><li>Evènement</li></a>
+                  <a href="#"><li>Massage</li></a>
+                  <a href="#"><li>Cocktails</li></a>
+               </ul>
+            </div>
+   
+            <div class="footer-items">
+               <h2>Quick links</h2>
+               <div class="border"></div>
+               <ul class="map">
+                  <li><i class="icon fas fa-map-marker-alt"></i>adresse</li>
+                  <li><i class="icon fas fa-phone"></i>adresse</li>
+                  <li><i class="icon fas fa-envelope"></i>adresse</li>
+                  <li><i class="icon fas fa-map-marker-alt"></i>adresse</li>
+               </ul>
+               <div class="social-media">
+                  <a href="#"><i class="social fab fa-facebook-f"></i></a>
+                  <a href="#"><i class="social fas fa-map-marker-alt"></i></a>
+                  <a href="#"><i class="social fas fa-map-marker-alt"></i></a>
+               </div>
+            </div>
+   
+         </div>
+         <div class="footer-bottom">
+            Copyright &copy; Anime Jonetsu 2019. All rights reserved.
+         </div>
+      </div>
    </footer>
 
 </body>
