--- a/article.html
+++ b/article.html
@@ -8,6 +8,7 @@
    <link rel="stylesheet" href="banner.css" />
    <link rel="stylesheet" href="nav.css" />
    <link rel="stylesheet" href="article.css" />
+   <script type="text/javascript" src="banner_article.js"></script>
    <title>Anime Jonetsu</title>
    <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc...">
    <meta name="author" content="Ericka, Aina, Guillaume et Nabil">
@@ -22,21 +23,23 @@
 
          <!-- GUILLAUME BANNER -->
       <section>
-
+         <div id="banner2">
+               <p class="text_banner2">Articles</p>
+         </div>
       </section>
    </header>
    <main>
          <!-- eRICKA ARTICLE-->
       <section class=article1-DBZ>
-         <h1 class="typographie-titre">Dragon ball Z, plus qu'un mangas une legende !</h1>
+         <h1 class="typographie-titre">Dragon ball Z, plus qu'un manga une légende !</h1>
          <article class="typographie" >
             <img class="gif-DBZ1" src="images/gif-article-DBZ.gif">
             <p class="p-float" > <span class="MAJ">D</span>ragon Ball Z reprend l'histoire de Sangoku plusieurs années après son mariage avec Chichi. Le couple a un fils nommé Sangohan en hommage à son arrière grand-père du même nom.</p>
-            <p class="p-float" >Un jour, Raditz atterrit sur la Terre et déclare qu'il est le frère de Sangoku. Il appartient au peuple des Sayajins, des guerriers intersidéraux mettant l'univers à feu et à sang. Leur planète, la planète Vegeta, a été détruite et il ne reste plus que quatre Sayajins purs : Sangoku, Raditz et ses complices partis en mission, Vegeta et Nappa. Sangoku refuse de s'associer à Raditz qui décide alors d'enlever Sangohan. 
+            <p class="p-float" ><span class="MAJ">U</span>n jour, Radditz atterrit sur Terre et déclare qu'il est le frère de Sangoku. Il appartient au peuple des Sayajins, des guerriers intersidéraux mettant l'univers à feu et à sang. Leur planète, la planète Vegeta, a été détruite et il ne reste plus que quatre Sayajins purs : Sangoku, Radditz et ses complices partis en mission, Vegeta et Nappa. Sangoku refuse de s'associer à Radditz qui décide alors d'enlever Sangohan. 
                   C'est ici que commence cette grande aventure... </p>
             <p class="p-float"><span class="MAJ">C</span>’est un manga culte de quatre séries animées: Dragon Ball, Dragon Ball Z, Dragon Ball GT, et une suite directe au manga, intitulée Dragon Ball Super.  </p>
             <div class="position-gif-DBZ2"><img class="gif-DBZ2" src="images/gif1.gif"></div>
-            <p class="p-float">Dragon Ball Super est la suite de la saga Boo. Cela parle un peu de ce qui s’est passé après la bataille, puis l’histoire continue sur la saga Battle of Gods, qui introduit Beerus, le dieu de la destruction, puis enchaîne sur la saga Résurrection de F à l’occasion de laquelle Freezer revient à la vie.  Projetés en dehors de notre univers, face à eux, nos voisins de l'Univers 6 !</p>
+            <p class="p-float"><span class="MAJ">D</span>ragon Ball Super est la suite de la saga Boo. Cela raconte ce qui s’est passé après la bataille, puis l’histoire continue sur la saga Battle of Gods, qui introduit Beerus, le dieu de la destruction, et Whis son ange gardien. Puis enchaîne sur la saga Résurrection de F à l’occasion de laquelle Freezer revient à la vie.  Projetés en dehors de notre univers, face à eux, nos voisins de l'Univers 6 !</p>
 
          </article>
          
