--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
    <link rel="stylesheet" href="Card.css" />
    <link rel="stylesheet" href="banner.css" />
    <link rel="stylesheet" href="nav.css" />
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-   <link rel="stylesheet" href="footer.css">
+   <link rel="stylesheet" href="footer.css" />
    <title>Anime Jonetsu</title>
    <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc..." />
    <meta name="author" content="Ericka, Aina, Guillaume et Nabil" />
@@ -25,8 +25,10 @@
       <section>
          <div id="banner1">
             <div class="banner1_text_bouton">
-               <p class="text_banner1">La référence Toulousaine number<br/>one du manga !</p>
-               <input type="button" class="bouton1" value="Bande d'annonce">
+               <p class="text_banner1">
+                  La référence Toulousaine number<br />one du manga !
+               </p>
+               <input type="button" class="bouton1" value="Bande d'annonce" />
             </div>
          </div>
       </section>
@@ -57,14 +59,14 @@
             <div class="face face1">
                <div class="content">
                   <img src="images/dbz.jpg" alt="image1" />
-                  <h3>Dragon Ball </h3>
+                  <h3>Dragon Ball</h3>
                </div>
             </div>
             <div class="face face2">
                <div class="content">
                   <p>
-                     Dragon Ball  se déroule cinq ans après le mariage de Son Goku
-                     et de Chichi, désormais parents de...
+                     Dragon Ball se déroule cinq ans après le mariage de Son Goku et
+                     de Chichi, désormais parents de...
                   </p>
                   <a href="article.html" target="_blank">Read More</a>
                </div>
@@ -111,57 +113,82 @@
 
    <!-- GUILLAUME CONTACT -->
    <section>
-         <div id="banner_contact_index">
-               <div class="banner_contact">
-                  <p class="contact_index">Contact Us</p>
-               </div>
-            </div>
-
+      <div id="banner_contact_index">
+         <div class="banner_contact">
+            <a href="apropos.html#ancrecontact" class="liencontact">
+               <p class="contact_index">Contact Us</p>
+            </a>
+         </div>
+      </div>
    </section>
 
    <!-- AINA -->
    <footer>
       <div class="footer">
          <div class="inner-footer">
-   
             <div class="footer-items">
                <h1>Anime jonetsu</h1>
                <div class="border"></div>
-               <p>La référence des Animes et Mangas du web. Tout les jours les meilleures news et des lot à gagner. </p>
+               <p>
+                  La référence des Animes et Mangas du web. Tout les jours les
+                  meilleures news et des lot à gagner.
+               </p>
             </div>
-   
+
             <div class="footer-items">
                <h2>Notre Site</h2>
                <div class="border"></div>
                <ul>
-                  <a href="#"><li>Accueil</li></a>
-                  <a href="#"><li>A propos</li></a>
-                  <a href="#"><li>Evènement</li></a>
-                  <a href="#"><li>Nous contacter</li></a>
-                  <a href="#"><li>Aide</li></a>
+                  <a href="#">
+                     <li>Accueil</li>
+                  </a>
+                  <a href="#">
+                     <li>A propos</li>
+                  </a>
+                  <a href="#">
+                     <li>Evènement</li>
+                  </a>
+                  <a href="#">
+                     <li>Nous contacter</li>
+                  </a>
+                  <a href="#">
+                     <li>Aide</li>
+                  </a>
                </ul>
             </div>
-   
+
             <div class="footer-items">
                <h2>Liens Rapide</h2>
                <div class="border"></div>
                <ul>
-                  <a href="#"><li>Top 100</li></a>
-                  <a href="#"><li>Recrutement</li></a>
-                  <a href="#"><li>Jeux concours</li></a>
-                  <a href="#"><li>Données personnelles</li></a>
-                  <a href="#"><li>Revue de presse</li></a>
+                  <a href="#">
+                     <li>Top 100</li>
+                  </a>
+                  <a href="#">
+                     <li>Recrutement</li>
+                  </a>
+                  <a href="#">
+                     <li>Jeux concours</li>
+                  </a>
+                  <a href="#">
+                     <li>Données personnelles</li>
+                  </a>
+                  <a href="#">
+                     <li>Revue de presse</li>
+                  </a>
                </ul>
             </div>
-   
+
             <div class="footer-items">
                <h2>Nous contacter</h2>
                <div class="border"></div>
                <ul class="map">
-                  <li><i class="icon fas fa-map-marker-alt"></i>18 rue du capitol 31100</li>
+                  <li>
+                     <i class="icon fas fa-map-marker-alt"></i>18 rue du capitol
+                     31100
+                  </li>
                   <li><i class="icon fas fa-phone"></i>06 07 08 09 01</li>
                   <li><i class="icon fas fa-envelope"></i>benweb31@gmail.com</li>
-   
                </ul>
                <div class="social-media">
                   <a href="#"><i class="social fab fa-facebook-f"></i></a>
@@ -169,7 +196,6 @@
                   <a href="#"><i class="fab fa-instagram"></i></a>
                </div>
             </div>
-   
          </div>
          <div class="footer-bottom">
             Copyright &copy; Anime Jonetsu 2019. All rights reserved.
