--- a/apropos.html
+++ b/apropos.html
@@ -10,6 +10,7 @@
    <link rel="stylesheet" href="nav.css" />
    <link rel="stylesheet" href="footer.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet" />
    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
    <title>Anime Jonetsu</title>
    <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc...">
@@ -20,6 +21,31 @@
    <header>
       <!-- AINA -->
       <nav>
+
+            <div class="nav">
+                  <div>
+                     <ul id="menu-demo2">
+                        <li class="Anime"><a href="#">Anime Jonetsu</a></li>
+                        <li class="Articles">
+                           <a href="#">Articles</a>
+                           <ul>
+                              <li><a href="#">Le Titan Assaillant</a></li>
+                              <li><a href="#DragonBall">Dragon Ball</a></li>
+                              <li><a href="#">Hunter X hunter</a></li>
+                              <li><a href="#">One Piece</a></li>
+                           </ul>
+                        </li>
+                        <li class="Apropos"><a href="#">A propos</a></li>
+                     </ul>
+                  </div>
+      
+                  <div class="search-box">
+                     <input class="search-txt" type="text" name="" placeholder="Type to search" />
+                     <a class="search-btn" href="#">
+                        <i class="fas fa-search"></i>
+                     </a>
+                  </div>
+               </div>
 
       </nav>
 
