--- a/article.html
+++ b/article.html
@@ -18,6 +18,32 @@
 <body>
    <header>
          <!-- AINA -->
+         <nav>
+            <div class="navbar">
+               <div class = "nav">
+                  <div>
+                     <ul id="menu-demo2">
+                        <li class = "Anime"><a href="#">Anime Jonetsu</a></li>
+                        <li class ="Articles"><a href="#">Articles</a>
+                           <ul>
+                              <li><a href="#">Le Titan Assaillant</a></li>
+                              <li><a href="#DragonBall">Dragon Ball</a></li>
+                              <li><a href="#">Hunter X hunter</a></li>
+                              <li><a href="#">One Piece</a></li>
+                           </ul>
+                        </li>
+                        <li class = "Apropos"><a href="#">A propos</a></li>
+                     </ul>  
+                  </div>                            
+                  <div class = "search-box">
+                    <input class = "search-txt" type = "text" name = "" placeholder = "Type to search">
+                    <a class = "search-btn" href = "#"> 
+                       <i class="fas fa-search"></i>
+                    </a>   
+                  </div>
+               </div>
+            </div>
+         </nav>
       <nav>
 
       </nav>
