--- a/apropos.html
+++ b/apropos.html
@@ -23,6 +23,9 @@
 
          <!-- GUILLAUME BANNER -->
       <section>
+            <div id="banner_apropos">
+               <p class="text_banner_apropos">A propos de nous</p>
+            </div>
 
       </section>
    </header>
