--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
          <div class="card card1">
             <div class="face face1">
                <div class="content">
-                  <img src="images/Top2.jpg" alt="image1" />
+                  <img src="images/Top2.jpg" alt="Le Titan Assaillant" />
                   <h3>Le Titan Assaillant</h3>
                </div>
             </div>
@@ -87,7 +87,7 @@
          <div class="card card2">
             <div class="face face1">
                <div class="content">
-                  <img src="images/dbz.jpg" alt="image1" />
+                  <img src="images/dbz.jpg" alt="Dragon Ball" />
                   <h3>Dragon Ball</h3>
                </div>
             </div>
@@ -105,7 +105,7 @@
          <div class="card card3">
             <div class="face face1">
                <div class="content">
-                  <img src="images/Top3.jpg " alt="image1" />
+                  <img src="images/Top3.jpg " alt="Hunter x Hunter" />
                   <h3>Hunter x Hunter</h3>
                </div>
             </div>
@@ -123,7 +123,7 @@
          <div class="card card3">
             <div class="face face1">
                <div class="content">
-                  <img src="images/onepiece.jpg " alt="image1" />
+                  <img src="images/onepiece.jpg " alt="One Piece" />
                   <h3>One Piece</h3>
                </div>
             </div>
