banner a propos terminée + quelques corrections sur index et banner_index

--- a/apropos.html
+++ b/apropos.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="footer.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/css?family=Patua+One%7CPermanent+Marker&display=swap" rel="stylesheet">
    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
    <title>Anime Jonetsu</title>
    <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc...">
@@ -50,7 +51,7 @@
       </nav>
 
       <!-- GUILLAUME BANNER -->
-      <section>
+      <section id="margin_banner">
             <div id="banner_apropos">
                <p class="text_banner_apropos">A propos de nous</p>
             </div>
