avant dernier jet

--- a/index.html
+++ b/index.html
@@ -159,8 +159,7 @@
                <h1>Anime jonetsu</h1>
                <div class="border"></div>
                <p>
-                  La référence des Animes et Mangas du web. Tout les jours les
-                  meilleures news et des lot à gagner.
+                  Site de référence, spécialement dédié aux amateurs et amatrices de mangas et animes en France et ailleurs. Nous partageons et échangeons sur toutes les actualités qui tournent autour du sujet! Bonne lecture !
                </p>
             </div>
 
@@ -168,21 +167,31 @@
                <h2>Notre Site</h2>
                <div class="border"></div>
                <ul>
+                  <li>
                   <a href="#">
-                     <li>Accueil</li>
-                  </a>
+                        Accueil
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>A propos</li>
-                  </a>
+                        A propos
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Evènement</li>
-                  </a>
+                        Evènements
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Nous contacter</li>
-                  </a>
+                        Nous contacter
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Aide</li>
-                  </a>
+                        Aide
+                     </a>
+                  </li>
                </ul>
             </div>
 
@@ -190,21 +199,31 @@
                <h2>Liens Rapide</h2>
                <div class="border"></div>
                <ul>
+                  <li>
                   <a href="#">
-                     <li>Top 100</li>
-                  </a>
+                        Top 10
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Recrutement</li>
-                  </a>
+                        Sources
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Jeux concours</li>
-                  </a>
+                        Jeux concours
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Données personnelles</li>
-                  </a>
+                        Données personnelles
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Revue de presse</li>
-                  </a>
+                        Revue de presse
+                     </a>
+                  </li>
                </ul>
             </div>
 
@@ -214,9 +233,9 @@
                <ul class="map">
                   <li>
                      <i class="icon fas fa-map-marker-alt"></i>18 rue du capitol
-                     31100
+                     31100 Toulouse
                   </li>
-                  <li><i class="icon fas fa-phone"></i>06 07 08 09 01</li>
+                  <li><i class="icon fas fa-phone"></i>06 37 94 40 98</li>
                   <li><i class="icon fas fa-envelope"></i>benweb31@gmail.com</li>
                </ul>
                <div class="social-media">
