avant dernier jet1

--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
          <div class="nav">
             <div>
                <ul id="menu-demo2">
-                  <li class="Anime"><a href="#">Anime Jonetsu</a></li>
+                  <li class="Anime"><a href="index.html">Anime Jonetsu</a></li>
                   <li class="Articles">
-                     <a href="#">Articles</a>
+                     <a href="article.html">Articles</a>
                      <ul>
                         <li><a href="#">Le Titan Assaillant</a></li>
-                        <li><a href="#DragonBall">Dragon Ball</a></li>
+                        <li><a href="article.html">Dragon Ball</a></li>
                         <li><a href="#">Hunter X hunter</a></li>
                         <li><a href="#">One Piece</a></li>
                      </ul>
                   </li>
-                  <li class="Apropos"><a href="#">A propos</a></li>
+                  <li class="Apropos"><a href="apropos.html">A propos</a></li>
                </ul>
             </div>
 
@@ -206,7 +206,7 @@
                      </a>
                   </li>
                   <li>
-                  <a href="#">
+                  <a href="source.html">
                         Sources
                      </a>
                   </li>
