--- a/apropos.html
+++ b/apropos.html
@@ -82,13 +82,13 @@
                 <div class="card">
                    <h2>Ericka</h2>
                   <p class="date">19 Sep, 2019</p>
-                  <p class="text"><img class="ericka" src="images/img_20190318_202750.jpg"> Namaste ! passionnée de mangas depuis mon enfance, il était logique qu emon premier site voyant le jour soit sur ce théme.<br> Petite anecdote le nom du site veut dire en japonais: passion animé ;) </p>
+                  <p class="text"><img class="ericka" src="images/img_20190318_202750.jpg"> Namaste ! passionnée de mangas depuis mon enfance, il était logique que mon premier site voyant le jour soit sur ce théme.<br> Petite anecdote le nom du site veut dire en japonais: passion animé ;) </p>
                   </div>
               </div>
               <div class="card">
                   <h2>Guillaume</h2>
                  <p class="date">19 Sep, 2019</p>
-                 <p class="text"><img class="guillaume" src="images/received_2350980298551139.jpeg"> Namaste ! passionnée de mangas depuis mon enfance, il était logique qu emon premier site voyant le jour soit sur ce théme.<br> Petite anecdote le nom du site veut dire en japonais: passion animé ;) </p>
+                 <p class="text"><img class="guillaume" src="images/received_2350980298551139.jpeg"> Anciennement serveur et développeur web en devenir, voici notre premier projet... Anime Jonetsu en esperant votre navigation agréable. </p>
                  </div>
              </div>
             </div>
