index passé au W3C aucune erreur

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
             <div class="search-box">
-               <input class="search-txt" type="text" name="" placeholder="Type to search" />
+               <input class="search-txt" type="text" name="search" placeholder="Type to search" />
                <a class="search-btn" href="#">
                   <i class="fas fa-search"></i>
                </a>
@@ -169,21 +169,31 @@
                <h2>Notre Site</h2>
                <div class="border"></div>
                <ul>
+                  <li>
                   <a href="#">
-                     <li>Accueil</li>
-                  </a>
+                        Accueil
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>A propos</li>
-                  </a>
+                        A propos
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Evènement</li>
-                  </a>
+                        Evènement
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Nous contacter</li>
-                  </a>
+                        Nous contacter
+                     </a>
+                  </li>
+                  <li>
                   <a href="#">
-                     <li>Aide</li>
-                  </a>
+                        Aide
+                     </a>
+                  </li>
                </ul>
             </div>
 
@@ -191,21 +201,31 @@
                <h2>Liens Rapide</h2>
                <div class="border"></div>
                <ul>
-                  <a href="#">
-                     <li>Top 100</li>
-                  </a>
-                  <a href="#">
-                     <li>Recrutement</li>
-                  </a>
-                  <a href="#">
-                     <li>Jeux concours</li>
-                  </a>
-                  <a href="#">
-                     <li>Données personnelles</li>
-                  </a>
-                  <a href="#">
-                     <li>Revue de presse</li>
-                  </a>
+                  <li>
+                     <a href="#">
+                        Top 100
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Recrutement
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Jeux concours
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Données personnelles
+                     </a>
+                  </li>
+                  <li>
+                     <a href="#">
+                        Revue de presse
+                     </a>
+                  </li>
                </ul>
             </div>
 
