rajout des nav et footer

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                <h1>Anime jonetsu</h1>
                <div class="border"></div>
                <p>
-                  Site de référence, spécialement dédié aux amateurs et amatrices de mangas et animes en France et ailleurs. Nous partageons et échangeons sur toutes les actualités qui tournent autour du sujet! Bonne lecture !
+                  Site de référence où nous partageons et échangeons sur toutes les actualités qui tournent autour des mangas et animes en France et ailleurs. 
                </p>
             </div>
 
@@ -197,12 +197,12 @@
             </div>
 
             <div class="footer-items">
-               <h2>Liens Rapide</h2>
+               <h2 c>Liens Rapide</h2>
                <div class="border"></div>
                <ul>
                   <li>
                   <a href="#">
-                        Top 10
+                        Top 100
                      </a>
                   </li>
                   <li>
@@ -233,15 +233,15 @@
                <div class="border"></div>
                <ul class="map">
                   <li>
-                     <i class="icon fas fa-map-marker-alt"></i>18 rue du capitol
+                     <i class="icon fas fa-map-marker-alt"></i>18 rue du capitole
                      31100 Toulouse
                   </li>
                   <li><i class="icon fas fa-phone"></i>06 37 94 40 98</li>
                   <li><i class="icon fas fa-envelope"></i>benweb31@gmail.com</li>
                </ul>
                <div class="social-media">
-                  <a href="#"><i class="social fab fa-facebook-f"></i></a>
                   <a href="#"><i class="social fab fa-twitter"></i></a>
+                  <a href="#"><i class="social fab fa-facebook-f"></i></a>
                   <a href="#"><i class="fab fa-instagram"></i></a>
                </div>
             </div>
