recup push aina final

--- a/apropos.html
+++ b/apropos.html
@@ -75,7 +75,7 @@
                 <div class="card">
                   <h2>Nabil</h2>
                   <p class="date">19 sep, 2019</p>
-                  <p class="text"><img class="nabil" src="images/image_d___ios.jpg">Quelque qualités mineurs me caractérise:<br> Intelligence vive <br> Excellent stratége <br> Maître de la furtivité <br> Pêcheur qualifié </p>
+                  <p class="text"><img class="nabil" src="images/image_d___ios.jpg">Mon top anime: <br> Shingeki no Kyojin, Death Note et Hunter x Hunter<br>Sinon j'aime le chocolat et mes quelques qualités mineures: <br> Excellent stratége <br> Maître de la furtivité <br> Pêcheur qualifié </p>
             
                   </div>
 
