--- a/article.html
+++ b/article.html
@@ -11,7 +11,8 @@
    <link rel="stylesheet" href="footer.css" />
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-   <link href="https://fonts.googleapis.com/css?family=Patua+One|Permanent+Marker&amp;display=swap" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet" />
    <title>Anime Jonetsu</title>
    <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc..." />
    <meta name="author" content="Ericka, Aina, Guillaume et Nabil" />
@@ -41,7 +42,7 @@
                   </div>
       
                   <div class="search-box">
-                     <input class="search-txt" type="text" name="" placeholder="Type to search" />
+                     <input class="search-txt" type="text" name="Search" placeholder="Type to search" />
                      <a class="search-btn" href="#">
                         <i class="fas fa-search"></i>
                      </a>
@@ -85,7 +86,7 @@
                directe au manga, intitulée Dragon Ball Super.
             </p>
             <div class="position-gif-DBZ2">
-               <img class="gif-DBZ2" src="images/gif1.gif" />
+               <img class="gif-DBZ2" src="images/gif1.gif" alt="Son Goku" />
             </div>
             <p class="p-float">
                <span class="MAJ">D</span>ragon Ball Super est la suite de la saga
@@ -144,7 +145,7 @@
                </div>
    
                <div class="footer-items">
-                  <h2 c>Liens Rapide</h2>
+                  <h2>Liens Rapide</h2>
                   <div class="border"></div>
                   <ul>
                      <li>
