correction mineure w3c manque apropos

--- a/article.html
+++ b/article.html
@@ -82,7 +82,7 @@
                directe au manga, intitulée Dragon Ball Super.
             </p>
             <div class="position-gif-DBZ2">
-               <img class="gif-DBZ2" src="images/gif1.gif" />
+               <img class="gif-DBZ2" src="images/gif1.gif" alt="gif de sangoku"/>
             </div>
             <p class="p-float">
                <span class="MAJ">D</span>ragon Ball Super est la suite de la saga
@@ -141,7 +141,7 @@
                </div>
    
                <div class="footer-items">
-                  <h2 c>Liens Rapide</h2>
+                  <h2>Liens Rapide</h2>
                   <div class="border"></div>
                   <ul>
                      <li>
