--- a/source.html
+++ b/source.html
@@ -149,7 +149,7 @@
                </div>
    
                <div class="footer-items">
-                  <h2 c>Liens Rapide</h2>
+                  <h2>Liens Rapide</h2>
                   <div class="border"></div>
                   <ul>
                      <li>
