--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
             </div>
 
             <div class="footer-items">
-               <h2 c>Liens Rapide</h2>
+               <h2>Liens Rapide</h2>
                <div class="border"></div>
                <ul>
                   <li>
@@ -213,8 +213,6 @@
                      </a>
                   </li>
                   <li>
-                     <a href="#">
-
                   <a href="#">
                         Top 100
                      </a>
@@ -231,8 +229,6 @@
                      </a>
                   </li>
                   <li>
-
-                     <a href="#">
 
                   <a href="#">
 
