--- a/apropos.html
+++ b/apropos.html
@@ -68,7 +68,7 @@
                 <div class="card first">
                   <h2>Aina</h2>
                   <p class="date">19 sep, 2019</p>
-                  <p class="text"><img class="aina" src="images/photoaina.jpg" alt="photoAina">Hello,
+                  <p class="text"><img class="aina" src="images/photoaina.jpg" alt="photoAina">Hello! 
                      Apprentie développeuse, issue d'une formation en infographie, nous sommes fiers de vous présenter notre projet commun ! Si le travail vous a plu, ou si vous aviez une quelconque remarque, n'hésitez pas à commenter !</p>
                   
                 </div>
