--- a/article.html
+++ b/article.html
@@ -180,7 +180,8 @@
                   <ul class="map">
                      <li>
                         <i class="icon fas fa-map-marker-alt"></i>18 rue du capitole
-                        31100 Toulouse
+                       </li> 
+                       <li>31100 Toulouse</li>
                      </li>
                      <li><i class="icon fas fa-phone"></i>06 37 94 40 98</li>
                      <li><i class="icon fas fa-envelope"></i>benweb31@gmail.com</li>
