--- a/apropos.html
+++ b/apropos.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
 
-<head>
+<"head>
    <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -214,7 +214,8 @@
                      <ul class="map">
                         <li>
                            <i class="icon fas fa-map-marker-alt"></i>18 rue du capitole
-                           31100 Toulouse
+                          </li> 
+                          <li>31100 Toulouse</li>
                         </li>
                         <li><i class="icon fas fa-phone"></i>06 37 94 40 98</li>
                         <li><i class="icon fas fa-envelope"></i>benweb31@gmail.com</li>
