--- a/source.html
+++ b/source.html
@@ -10,7 +10,8 @@
    <link rel="stylesheet" href="footer.css" />
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-   <link href="https://fonts.googleapis.com/css?family=Patua+One|Permanent+Marker&amp;display=swap" rel="stylesheet" />
+   <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet" />
    <title>Anime Jonetsu</title>
    <meta name="description" content="Blog des tendances mangas et animes. Vos meilleures shonen etc..." />
    <meta name="author" content="Ericka, Aina, Guillaume et Nabil" />
