aller les ninja

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
                <ul id="menu-demo2">
                   <li class="Anime"><a href="index.html">Anime Jonetsu</a></li>
                   <li class="Articles">
-                     <a href="article.html">Articles</a>
+                     <a href="#">Articles</a>
                      <ul>
-                        <li><a href="#">Le Titan Assaillant</a></li>
+                        <li><a href="attack.html">Le Titan Assaillant</a></li>
                         <li><a href="article.html">Dragon Ball</a></li>
-                        <li><a href="#">Hunter X hunter</a></li>
-                        <li><a href="#">One Piece</a></li>
+                        <li><a href="article2.html">Hunter X hunter</a></li>
+                        <li><a href="article3.html">One Piece</a></li>
                      </ul>
                   </li>
                   <li class="Apropos"><a href="apropos.html">A propos</a></li>
@@ -80,7 +80,7 @@
                      En l’an 845, les humains n’ont pas aperçu de Titans aux abords
                      du district de Shiganshina...
                   </p>
-                  <a href="article.html" target="_blank">Read More</a>
+                  <a href="attack.html" target="_blank">Read More</a>
                </div>
             </div>
          </div>
@@ -116,7 +116,7 @@
                      Gon Freecss a douze ans, et rêve de devenir hunter (chasseur en
                      anglais). Les hunters sont des aventuriers...
                   </p>
-                  <a href="article.html" target="_blank">Read More</a>
+                  <a href="article2.html" target="_blank">Read More</a>
                </div>
             </div>
          </div>
@@ -134,7 +134,7 @@
                      La série suit les aventures de Monkey D. Luffy, un jeune garçon
                      accompagné de son fidèle équipage...
                   </p>
-                  <a href="article.html" target="_blank">Read More</a>
+                  <a href="article3.html" target="_blank">Read More</a>
                </div>
             </div>
          </div>
@@ -210,11 +210,6 @@
                   <li>
                      <a href="#">
                         Recrutement
-                     </a>
-                  </li>
-                  <li>
-                  <a href="#">
-                        Top 10
                      </a>
                   </li>
                   <li>
