--- a/apropos.html
+++ b/apropos.html
@@ -27,12 +27,12 @@
                <ul id="menu-demo2">
                   <li class="Anime"><a href="index.html">Anime Jonetsu</a></li>
                   <li class="Articles">
-                     <a href="article.html">Articles</a>
+                     <a href="#">Articles</a>
                      <ul>
-                        <li><a href="#">Le Titan Assaillant</a></li>
+                        <li><a href="attack.html">Le Titan Assaillant</a></li>
                         <li><a href="article.html">Dragon Ball</a></li>
-                        <li><a href="#">Hunter X hunter</a></li>
-                        <li><a href="#">One Piece</a></li>
+                        <li><a href="article2.html">Hunter X hunter</a></li>
+                        <li><a href="article3.html">One Piece</a></li>
                      </ul>
                   </li>
                   <li class="Apropos"><a href="apropos.html">A propos</a></li>
