--- a/article2.html
+++ b/article2.html
@@ -59,7 +59,7 @@
       <!-- eRICKA ARTICLE-->
       <section class="article1-DBZ">
          <h1 class="typographie-titre">
-            Hunter X Hunter !
+            Hunter X Hunter, dramatique et tranchant !
          </h1>
          <article class="typographie">
             <p class="p-float">
