--- a/attack.html
+++ b/attack.html
@@ -50,8 +50,8 @@
 
       <!-- GUILLAUME BANNER -->
       <section>
-         <div id="banner2">
-            <p class="text_banner2">Articles</p>
+         <div id="banner_attack">
+            <p class="text_banner_attack">Articles</p>
          </div>
       </section>
    </header>
