--- a/article2.html
+++ b/article2.html
@@ -50,8 +50,8 @@
 
       <!-- GUILLAUME BANNER -->
       <section>
-         <div id="banner2">
-            <p class="text_banner2">Articles</p>
+         <div id="banner_hunter">
+            <p class="text_banner_hunter">Articles</p>
          </div>
       </section>
    </header>
