--- a/article3.html
+++ b/article3.html
@@ -50,8 +50,8 @@
 
       <!-- GUILLAUME BANNER -->
       <section>
-         <div id="banner2">
-            <p class="text_banner2">Articles</p>
+         <div id="banner_onepiece">
+            <p class="text_banner_onepiece">Articles</p>
          </div>
       </section>
    </header>
