commit après présentation

--- a/article3.html
+++ b/article3.html
@@ -84,7 +84,7 @@
                tenter d’acquérir gloire, pouvoir et richesses.
             </p>
             <div class="position-gif-DBZ2">
-               <img class="gif-DBZ2" src="images/onepiece.gif" alt="Son Goku" />
+               <img class="gif-onepiece" src="images/onepiece.gif" alt="Son Goku" />
 
             </div>
             <p class="p-float">
