modif JS ericka

--- a/index.html
+++ b/index.html
@@ -19,11 +19,9 @@
    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
    <link href="https://fonts.googleapis.com/css?family=Patua+One&display=swap" rel="stylesheet">
    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-</head>
-
 <body>
    <header>
-      <!-- AINA -->
+       <!-- AINA -->
       <nav>
          <div class="nav">
             <div>
@@ -58,7 +56,15 @@
                <p class="text_banner1">
                   La référence Toulousaine number<br />one du manga !
                </p>
-               <input type="button" class="bouton1" value="Bande d'annonce" />
+               <input type="button" class="bouton1" value="Top 2019" />
+                <!-- bande annoce youtube -->
+                
+                <div id="modal">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/Y3beSysqWUw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen id="iframe"></iframe>
+                    <button id="close-modal">Revenir au menu</button>
+                </div>
+                  
+                <!-- terminer youtube -->
             </div>
          </div>
       </section>
@@ -267,6 +273,7 @@
          </div>
       </div>
    </footer>
+   <script src="projet-JS.js"></script>
 </body>
 
 </html>
